assets/css/markdown.css
/* ... */
  
  .markdown-body details,
  .markdown-body figcaption,
  .markdown-body figure {
    display: block;
  }
  
  .markdown-body summary {
    display: list-item;
  }
  
  .markdown-body [hidden] {
    display: none !important;
  }
  
  
  .markdown-body abbr[title] {
    border-bottom: none;
    -webkit-text-decoration: underline dotted;
    text-decoration: underline dotted;
  }
  
  .markdown-body b,
  .markdown-body strong {
    font-weight: var(--font-weight-semi-bold);
  }
  
  .markdown-body dfn {
    font-style: italic;
  }
  
  
  .markdown-body mark {
    background-color: var(--bgColor-attention-muted);
    color: var(--text-plain);
  }
  
  .markdown-body small {
    font-size: var(--font-xs);
  }
  
  .markdown-body sub,
  .markdown-body sup {
    font-size: var(--font-2xs);
    line-height: 0;
    position: relative;
    vertical-align: baseline;
  }
  
  .markdown-body sub {
    bottom: -0.25em;
  }
  
  .markdown-body sup {
    top: -0.5em;
  }
  
  .markdown-body img {
    border-style: none;
    max-width: 100%;
    box-sizing: content-box;
  }
  
  .markdown-body code,
  .markdown-body kbd,
  .markdown-body pre,
  .markdown-body samp {
    font-family: var(--font-tertiary);
    font-size: var(--font-s);
  }
  
  .markdown-body figure {
    margin: 1em var(--space-3xl);
  }
  
  .markdown-body hr {
    box-sizing: content-box;
    overflow: hidden;
    background: transparent;
    border: 0;
    border-bottom: var(--border-s) solid var(--border-faded);
    /* height: .25em; */
    padding: 0;
    margin: var(--space-xl) 0;
    /* background-color: var(--border-secondary); */
  }
  
  .markdown-body input {
    font: inherit;
    margin: 0;
    overflow: visible;
    font-family: inherit;
    font-size: inherit;
    line-height: inherit;
  }
  
  .markdown-body [type=button],
  .markdown-body [type=reset],
  .markdown-body [type=submit] {
    -webkit-appearance: button;
    appearance: button;
  }
  
  .markdown-body [type=checkbox],
  .markdown-body [type=radio] {
    box-sizing: border-box;
    padding: 0;
  }
  
  .markdown-body [type=number]::-webkit-inner-spin-button,
  .markdown-body [type=number]::-webkit-outer-spin-button {
    height: auto;
  }
  
  .markdown-body [type=search]::-webkit-search-cancel-button,
  .markdown-body [type=search]::-webkit-search-decoration {
    -webkit-appearance: none;
    appearance: none;
  }
  
  .markdown-body ::-webkit-input-placeholder {
    color: inherit;
    opacity: .54;
  }
  
  .markdown-body ::-webkit-file-upload-button {
    -webkit-appearance: button;
    appearance: button;
    font: inherit;
  }
  
  
  .markdown-body ::placeholder {
    color: var(--text-secondary);
    opacity: 1;
  }
  
  .markdown-body hr::before {
    display: table;
    content: "";
  }
  
  .markdown-body hr::after {
    display: table;
    clear: both;
    content: "";
  }
  
  .markdown-body .table-scroll {
    overflow-x: auto;
    -webkit-overflow-scrolling: touch;
  }

  .markdown-body table {
    border-spacing: 0;
    border-collapse: collapse;
    width: 100%;
    min-width: 480px;
    font-variant: tabular-nums;
  }


  .markdown-body thead {
    background-color: var(--background-faded);

  }
  
  .markdown-body td,
  .markdown-body th {
    padding: 0;
  }
  
  .markdown-body details summary {
    cursor: pointer;
  }
  
  .markdown-body a:focus,
  .markdown-body [role=button]:focus,
  .markdown-body input[type=radio]:focus,
  .markdown-body input[type=checkbox]:focus {
    outline: 2px solid var(--focus-outlineColor);
    outline-offset: -2px;
    box-shadow: none;
  }
  
  .markdown-body a:focus:not(:focus-visible),
  .markdown-body [role=button]:focus:not(:focus-visible),
  .markdown-body input[type=radio]:focus:not(:focus-visible),
  .markdown-body input[type=checkbox]:focus:not(:focus-visible) {
    outline: solid 1px transparent;
  }
  
  .markdown-body a:focus-visible,
  .markdown-body [role=button]:focus-visible,
  .markdown-body input[type=radio]:focus-visible,
  .markdown-body input[type=checkbox]:focus-visible {
    outline: 2px solid var(--focus-outlineColor);
    outline-offset: -2px;
    box-shadow: none;
  }
  
  .markdown-body a:not([class]):focus,
  .markdown-body a:not([class]):focus-visible,
  .markdown-body input[type=radio]:focus,
  .markdown-body input[type=radio]:focus-visible,
  .markdown-body input[type=checkbox]:focus,
  .markdown-body input[type=checkbox]:focus-visible {
    outline-offset: 0;
  }
  
  .markdown-body kbd {
    display: inline-block;
    padding: var(--space-xs);
    font: 11px var(--font-tertiary);
    line-height: 10px;
    color: var(--text-plain);
    vertical-align: middle;
    background-color: var(--background-faded);
    border: solid var(--border-s) var(--border-faded);
    border-bottom-color: var(--border-faded);
    border-radius: 6px;
    box-shadow: inset 0 -1px 0 var(--border-faded);
  }
  
  .markdown-body p {
    margin-top: 0;
    margin-bottom: 10px;
  }
  
  .markdown-body blockquote {
    margin: 0;
    padding: 0 var(--space-l);
    color: var(--text-secondary);
    border-left: .25em solid var(--border-secondary);
  }
  
  .markdown-body ul,
  .markdown-body ol {
    margin-top: 0;
    margin-bottom: 0;
    padding-left: var(--space-2xl);
  }
  
  .markdown-body ol ol,
  .markdown-body ul ol {
    list-style-type: lower-roman;
  }
  
  .markdown-body ul ul ol,
  .markdown-body ul ol ol,
  .markdown-body ol ul ol,
  .markdown-body ol ol ol {
    list-style-type: lower-alpha;
  }
  
  .markdown-body dd {
    margin-left: 0;
  }
  
  .markdown-body tt,
  .markdown-body code,
  .markdown-body samp {
    font-family: var(--font-tertiary);
    font-size: var(--font-2xs);
  }
  
  .markdown-body pre {
    margin-top: 0;
    margin-bottom: 0;
    font-family: var(--font-tertiary);
    font-size: var(--font-xs);
    word-wrap: normal;
  }
/* ... */

